# viewport

./: .dockerignore  .env.observability.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile-backend  Dockerfile-frontend  Dockerfile.backend  Dockerfile.frontend  Justfile  Makefile  OBSERVABILITY_RUNBOOK.md  README.md  REFACTORING_PROGRESS.md  TODO.md  alembic.ini  backend_overview.md  conftest.py  dasgboard_page_plan.md  docker-compose.observability.yml  docker-compose.yml  nginx.conf.example  product_requirements_document.md  product_requirements_document_backend.md  product_requirements_document_frontend.md  pyproject.toml  storage_quota_specification.md  tasks_1.md  untitled:plan-celeryToTaskiqMigration.prompt.md
.github/: copilot-instructions.md
.github/prompts/: plan-confirmationModalRefactor.prompt.md
.github/workflows/: ci.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
config/observability/: otel-collector.yaml
config/observability/alertmanager/: alertmanager.yml.example
config/observability/alloy/: config.alloy
config/observability/loki/: loki.yml
config/observability/prometheus/: prometheus.yml
config/observability/tempo/: tempo.yml
docs/: ARCHITECTURE.md  AVIF_THUMBNAILS_UPDATE.md  CONNECTION_LEAK_FIX.md  LOAD_TEST_MONITORING.md  README.md  gallery-descriptions.md  initial_tasks_frontend.md  observability-monitoring-plan.md  observability-monitoring.md  photo_sequence_v2.puml  projects-and-folders.md  projects-and-galleries.md  sharelink-passwords.md
docs/android_app/: photographer-app.md
docs/android_app/develompent/: execution-backlog.md
docs/api/: README.md
docs/backend/: LEAN_GALLERY_API.md  README.md  auth.md  models.md  quota_flow_sequence.puml  quotas.md  structure.md  taskiq-migration.md
docs/deployment/: README.md  monitoring.md  observability-dependency-report.md
docs/development/: README.md
docs/frontend/: README.md  client-side-image-resize.md  headless-ui-primitives.md  structure.md
docs/runbooks/: api-down.md  api-error-rate.md  api-latency.md  celery-backlog.md  disk-space.md  observability-pipeline.md  postgres-saturation.md  redis-unavailable.md  s3-errors.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.vitest.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/components/: AuthLayout.tsx  AuthenticatedImage.tsx  ConfirmationModal.tsx  DeferredLenis.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  Layout.tsx  LazyImage.tsx  PaginationControls.tsx  PhotoModal.tsx  PhotoRenameModal.tsx  PhotoUploadConfirmModal.tsx  PhotoUploader.tsx  PresignedImage.tsx  ProfileModal.tsx  ProgressiveSlide.tsx  PublicBatchImage.tsx  PublicImage.tsx  ReadabilityInitializer.tsx  ReadabilitySettingsButton.tsx  RequireAuth.tsx  ThemeInitializer.tsx  ThemeSwitch.tsx
frontend/src/constants/: gallery.ts  upload.ts
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: index.ts  useAccessibleDialog.ts  useAsync.ts  useConfirmation.tsx  useDashboardActions.ts  useDocumentTitle.ts  useErrorDetails.ts  useErrorHandler.ts  useGalleryActions.ts  useGalleryDragAndDrop.ts  useModal.ts  useOnline.ts  usePagination.ts  usePhotoLightbox.tsx  usePhotoUpload.ts  useProfileActions.ts  usePublicGallery.ts  usePublicGalleryGrid.ts  usePublicSelection.ts  useSelection.ts  useTheme.ts
frontend/src/lib/: accessibility.ts  api.ts  avatar.ts  clipboard.ts  demoMode.ts  errorHandling.ts  filenameUtils.ts  imageResize.ts  imageThumbnail.ts  photoAspectRatioCache.ts  utils.ts
frontend/src/pages/: AccessibilityPage.tsx  DashboardPage.tsx  ErrorPage.tsx  GalleryPage.tsx  LandingPage.tsx  LoginPage.tsx  ProjectPage.tsx  PublicGalleryPage.tsx  RegisterPage.tsx  ShareLinkDetailPage.tsx  ShareLinksDashboardPage.tsx
frontend/src/services/: authService.ts  demoService.ts  galleryService.ts  photoService.ts  projectService.ts  shareLinkService.ts
frontend/src/stores/: authStore.ts  readabilityStore.ts  themeStore.ts
frontend/src/types/: auth.ts  common.ts  gallery.ts  index.ts  photo.ts  project.ts  sharelink.ts
rfcs/: improved_readability.md  photo_selection_overview.md  plan_photo_selection.md  product_requirements_document_backend.md  product_requirements_document_frontend.md  redis_backed_urls_plan.md  rfc_photo_selection.md  storage_quota_specification.md  websocket_plan.md
scripts/: build-release.sh  celery_management.sh  taskiq_management.sh
src/app/: auth_utils.py  db.py  main.py  minio_utils.py
src/app/alembic/: env.py
src/app/api/: auth.py  gallery.py  photo.py  public.py  sharelink.py
src/app/models/: __init__.py  user.py  (+2 more)
src/viewport/: __init__.py  auth_utils.py  background_tasks.py  cache_utils.py  celery_app.py  db.py  dependencies.py  filename_utils.py  gallery_constants.py  logger.py  logging_config.py  main.py  metrics.py  minio_utils.py  observability.py  redis_client.py  s3_service.py  s3_utils.py  selection_utils.py  sharelink_access.py  sharelink_utils.py  task_rate_limits.py  task_utils.py  telemetry_safety.py  thumbnail_tasks.py  tkq.py  zip_utils.py
tests/: conftest.py  helpers.py  test_admin_views.py  test_auth.py  test_auth_utils.py  test_background_tasks.py  test_cache_utils.py  test_cleanup_task.py  test_dependencies.py  test_file_proxy.py  test_filename_utils.py  test_files_api.py  test_gallery.py  test_gallery_api.py  test_gallery_repository.py  test_logger.py  test_main_lifespan.py  test_metrics.py  test_migrations.py  test_minio_utils.py  test_models.py  test_observability_config.py  test_observability_logging.py  test_observability_setup.py  test_photo.py  test_photo_access.py  test_photo_api.py  test_presigned_cache_service.py  test_project_api.py  test_project_repository.py  test_public_api.py  test_public_zip.py  test_redis_client.py  test_redis_service.py  test_s3_service.py  test_schemas.py  test_selection_api.py  test_selection_helpers.py  test_selection_repository.py  test_sharelink.py  (+6 more)
(+226 files in other folders)
